test: stabilize async persistence in integration tests and enhance content cleaning logic and disabled ExcelExportFullScanIntegrationTest until we find a fix